karnc/tests/fixtures/positive/211_karn_string_join/src/report/report.karn
commons report {
  uses karn.string

  fn csvLine(cells: List[String]) -> String {
    join(cells, ",")
  }

  fn roundTrip(line: String) -> String {
    join(line.split(","), ",")
  }
}
