karnc/tests/fixtures/negative/175_decode_uninferable/input.karn
commons bad {
  fn f(s: String) -> Bool {
    let r = Json.decode(s)
    true
  }
}
